letPoly/testcases/letPoly/ill-Typed/example7.lam
let x = cons (zero) (zero) in
x
